Fixed 'Custom Content Library Tree Collapse/Expand' in Content Navigation

--- a/css/contentNavigation/content-navigation.less
+++ b/css/contentNavigation/content-navigation.less
@@ -308,7 +308,7 @@
 			}
 
 			&.nested-list {
-				li:not( :first-child ) {
+				li:not( .cn-custom-library ) {
 					padding-left : 40px;
 					@media ( min-width : @screen-xs-max ) {
 						&:hover {
@@ -317,7 +317,7 @@
 					}
 				}
 
-				li:first-child {
+				.cn-custom-library {
 					font-weight : 600;
 				}
 			}
